PKW-033: disable zoom on mobile, heading font size fix on multiple device

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,13 +10,14 @@
 .heading{
   color:#ffffff;
   display: inline-block;
-  font-size: 2em;
+  font-size: 3rem;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .subheading{
   color: #fcff7a;
   font-family: 'Sansita Swashed', cursive;
+  font-size: 1.5rem;
 }
 
 .nav-item{
@@ -103,7 +104,6 @@ footer {
 
 
   @media (max-width: 544px) {  
-    .header {font-size: 1rem;}
     #footer{
       font-size: 14px;
     }
@@ -121,19 +121,45 @@ footer {
       height: 80px;
       width: 110px;
     }
+
+    .heading{
+      font-size: 2rem
+    }
+
+    .subheading{
+      font-size: 1.2rem;
+    }
+
+    .zoom:hover{
+      transform: scale(1);
+    }
   }
 
   /* Medium devices (tablets, 768px and up) */
-  @media(min-width: 0px){
-    .header{font-size: 12px;}
+  @media(max-width: 360px){
+
+    .heading{
+      font-size: 1.6rem
+    }
+
+    .subheading{
+      font-size: 1rem;
   }
 
-  @media(min-width: 320px){
-    .header{font-size: 12px;}
+
+  @media(max-width: 320px){
+
+    .heading{
+      font-size: 1.4rem
+    }
+
+    .subheading{
+      font-size: 0.8rem;
   }
   
-  @media (min-width: 768px) {  
-    .header {font-size: 30px;}
+  @media (min-width: 768px) { 
+    
+    
   }
 
   /* Large devices (desktops, 992px and up) */
